Added version of getsummary that prints in CSV friendly format

--- a/results/Makefile
+++ b/results/Makefile
@@ -109,6 +109,9 @@ GDISK=-below -close -grid -nolines
 summary: $(SRCS)
 	@$(SCRIPTS)getsummary $(LIST)
 
+sumcsv: $(SRCS)
+	@$(SCRIPTS)getsummary-csv $(LIST)
+
 percent: $(SRCS)
 	@$(SCRIPTS)getpercent $(LIST)
 
